Major enhancements and Maven Central preparation
- Removed Triplet concept for simplified two-class architecture
- Added multi-key join support with CompositeKey class
- Implemented fluent join API with CompositeKey.on() static methods
- Enhanced join capabilities: innerJoinOn(), leftJoinOn(), rightJoinOn()
- Added comprehensive static factory methods: key() and on()
- Updated POM for new Central Portal (post-OSSRH sunset)
- Added deployment documentation and configuration guide
- All tests passing (92 tests total)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>